fix: prevent sections from being hidden behind fixed header

--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,6 +1,8 @@
-html, body {
-  overflow-x: hidden;
-  max-width: 100%;
+html,
+body {
+    overflow-x: hidden;
+    max-width: 100%;
+    scroll-padding-top: 100px;
 }
 
 * {
